Core layer has been created

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
 /.vs/Comfy/v17/.suo
+/.vs/Comfy/FileContentIndex/80b43a0f-e25e-42b7-9e20-52bc618e19a9.vsidx
+/Comfy.Core/bin/Debug/net8.0/Comfy.Core.deps.json
+/Comfy.Core/bin/Debug/net8.0/Comfy.Core.dll
+/Comfy.Core/bin/Debug/net8.0/Comfy.Core.pdb
+/Comfy.Core/obj/Comfy.Core.csproj.nuget.dgspec.json
+/Comfy.Core/obj/Comfy.Core.csproj.nuget.g.props
+/Comfy.Core/obj/Comfy.Core.csproj.nuget.g.targets
+/Comfy.Core/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+/Comfy.Core/obj/Debug/net8.0/Comfy.Core.AssemblyInfo.cs
+/Comfy.Core/obj/Debug/net8.0/Comfy.Core.AssemblyInfoInputs.cache
+/Comfy.Core/obj/Debug/net8.0/Comfy.Core.assets.cache
+/Comfy.Core/obj/Debug/net8.0/Comfy.Core.csproj.CoreCompileInputs.cache
+/Comfy.Core/obj/Debug/net8.0/Comfy.Core.csproj.FileListAbsolute.txt
+/Comfy.Core/obj/Debug/net8.0/Comfy.Core.dll
+/Comfy.Core/obj/Debug/net8.0/Comfy.Core.GeneratedMSBuildEditorConfig.editorconfig
+/Comfy.Core/obj/Debug/net8.0/Comfy.Core.GlobalUsings.g.cs
+/Comfy.Core/obj/Debug/net8.0/Comfy.Core.pdb
+/Comfy.Core/obj/Debug/net8.0/Comfy.Core.sourcelink.json
+/Comfy.Core/obj/Debug/net8.0/ref/Comfy.Core.dll
+/Comfy.Core/obj/Debug/net8.0/refint/Comfy.Core.dll
+/Comfy.Core/obj/project.assets.json
+/Comfy.Core/obj/project.nuget.cache
