DataAccess layer has been created

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,29 @@
 /Comfy.Core/obj/Debug/net8.0/refint/Comfy.Core.dll
 /Comfy.Core/obj/project.assets.json
 /Comfy.Core/obj/project.nuget.cache
+/.vs/Comfy/DesignTimeBuild/.dtbcache.v2
+/.vs/Comfy/FileContentIndex/6af92948-b0e8-4f0d-a06c-855ed43d0fc4.vsidx
+/.vs/Comfy/v17/.futdcache.v2
+/.vs/ProjectEvaluation/comfy.metadata.v7.bin
+/.vs/ProjectEvaluation/comfy.projects.v7.bin
+/Comfy.DataAccess/bin/Debug/net8.0/Comfy.DataAccess.deps.json
+/Comfy.DataAccess/bin/Debug/net8.0/Comfy.DataAccess.dll
+/Comfy.DataAccess/bin/Debug/net8.0/Comfy.DataAccess.pdb
+/Comfy.DataAccess/obj/Comfy.DataAccess.csproj.nuget.dgspec.json
+/Comfy.DataAccess/obj/Comfy.DataAccess.csproj.nuget.g.props
+/Comfy.DataAccess/obj/Comfy.DataAccess.csproj.nuget.g.targets
+/Comfy.DataAccess/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.AssemblyInfo.cs
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.AssemblyInfoInputs.cache
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.assets.cache
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.csproj.CoreCompileInputs.cache
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.csproj.FileListAbsolute.txt
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.dll
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.GeneratedMSBuildEditorConfig.editorconfig
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.GlobalUsings.g.cs
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.pdb
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.sourcelink.json
+/Comfy.DataAccess/obj/Debug/net8.0/ref/Comfy.DataAccess.dll
+/Comfy.DataAccess/obj/Debug/net8.0/refint/Comfy.DataAccess.dll
+/Comfy.DataAccess/obj/project.assets.json
+/Comfy.DataAccess/obj/project.nuget.cache
