--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,36 @@
 /Comfy.DataAccess/obj/Debug/net8.0/refint/Comfy.DataAccess.dll
 /Comfy.DataAccess/obj/project.assets.json
 /Comfy.DataAccess/obj/project.nuget.cache
+/.vs/Comfy/FileContentIndex/00dff308-92fe-4916-8550-24e5f5b150d6.vsidx
+/.vs/Comfy/FileContentIndex/59a1950f-ccf7-4ffe-8195-c3139a528985.vsidx
+/Comfy.DataAccess/bin/Debug/net8.0/Comfy.Core.dll
+/Comfy.DataAccess/bin/Debug/net8.0/Comfy.Core.pdb
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.csproj.AssemblyReference.cache
+/Comfy.DataAccess/obj/Debug/net8.0/Comfy.DataAccess.csproj.CopyComplete
+/Comfy.Service/obj/Comfy.Service.csproj.nuget.dgspec.json
+/Comfy.Service/obj/Comfy.Service.csproj.nuget.g.props
+/Comfy.Service/obj/Comfy.Service.csproj.nuget.g.targets
+/Comfy.Service/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.AssemblyInfo.cs
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.AssemblyInfoInputs.cache
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.assets.cache
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.csproj.AssemblyReference.cache
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.csproj.CopyComplete
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.csproj.CoreCompileInputs.cache
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.csproj.FileListAbsolute.txt
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.dll
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.GeneratedMSBuildEditorConfig.editorconfig
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.GlobalUsings.g.cs
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.pdb
+/Comfy.Service/obj/Debug/net8.0/Comfy.Service.sourcelink.json
+/Comfy.Service/obj/Debug/net8.0/ref/Comfy.Service.dll
+/Comfy.Service/obj/Debug/net8.0/refint/Comfy.Service.dll
+/Comfy.Service/obj/project.assets.json
+/Comfy.Service/obj/project.nuget.cache
+/Comfy.Service/bin/Debug/net8.0/Comfy.Core.dll
+/Comfy.Service/bin/Debug/net8.0/Comfy.Core.pdb
+/Comfy.Service/bin/Debug/net8.0/Comfy.DataAccess.dll
+/Comfy.Service/bin/Debug/net8.0/Comfy.DataAccess.pdb
+/Comfy.Service/bin/Debug/net8.0/Comfy.Service.deps.json
+/Comfy.Service/bin/Debug/net8.0/Comfy.Service.dll
+/Comfy.Service/bin/Debug/net8.0/Comfy.Service.pdb
