--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,5 @@
 /Comfy.Service/bin/Debug/net8.0/Comfy.Service.deps.json
 /Comfy.Service/bin/Debug/net8.0/Comfy.Service.dll
 /Comfy.Service/bin/Debug/net8.0/Comfy.Service.pdb
+/.vs/Comfy/FileContentIndex/cef5a86a-0d80-4e88-affe-d5fed06fffe2.vsidx
+/.vs/Comfy/FileContentIndex/f43b459d-84f6-418e-8a1f-74fad97b0e58.vsidx
