--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@
 /Comfy.Service/bin/Debug/net8.0/Comfy.Service.pdb
 /.vs/Comfy/FileContentIndex/cef5a86a-0d80-4e88-affe-d5fed06fffe2.vsidx
 /.vs/Comfy/FileContentIndex/f43b459d-84f6-418e-8a1f-74fad97b0e58.vsidx
+/.vs/Comfy/FileContentIndex/b208b880-3d4b-4855-810c-20606d1caacc.vsidx
