Presentation layer has been created

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,47 @@
 /.vs/Comfy/FileContentIndex/cef5a86a-0d80-4e88-affe-d5fed06fffe2.vsidx
 /.vs/Comfy/FileContentIndex/f43b459d-84f6-418e-8a1f-74fad97b0e58.vsidx
 /.vs/Comfy/FileContentIndex/b208b880-3d4b-4855-810c-20606d1caacc.vsidx
+/.vs/Comfy/config/applicationhost.config
+/.vs/Comfy/FileContentIndex/747b14e8-95b2-4765-9eb8-e5a629354b94.vsidx
+/Comfy.Presentation/bin/Debug/net8.0/appsettings.Development.json
+/Comfy.Presentation/bin/Debug/net8.0/appsettings.json
+/Comfy.Presentation/bin/Debug/net8.0/Comfy.Presentation.deps.json
+/Comfy.Presentation/bin/Debug/net8.0/Comfy.Presentation.dll
+/Comfy.Presentation/bin/Debug/net8.0/Comfy.Presentation.exe
+/Comfy.Presentation/bin/Debug/net8.0/Comfy.Presentation.pdb
+/Comfy.Presentation/bin/Debug/net8.0/Comfy.Presentation.runtimeconfig.json
+/Comfy.Presentation/bin/Debug/net8.0/Comfy.Presentation.staticwebassets.runtime.json
+/Comfy.Presentation/obj/Comfy.Presentation.csproj.nuget.dgspec.json
+/Comfy.Presentation/obj/Comfy.Presentation.csproj.nuget.g.props
+/Comfy.Presentation/obj/Comfy.Presentation.csproj.nuget.g.targets
+/Comfy.Presentation/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
+/Comfy.Presentation/obj/Debug/net8.0/apphost.exe
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.AssemblyInfo.cs
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.AssemblyInfoInputs.cache
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.assets.cache
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.csproj.BuildWithSkipAnalyzers
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.csproj.CoreCompileInputs.cache
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.csproj.FileListAbsolute.txt
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.dll
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.GeneratedMSBuildEditorConfig.editorconfig
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.genruntimeconfig.cache
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.GlobalUsings.g.cs
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.MvcApplicationPartsAssemblyInfo.cache
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.pdb
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.RazorAssemblyInfo.cache
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.RazorAssemblyInfo.cs
+/Comfy.Presentation/obj/Debug/net8.0/Comfy.Presentation.sourcelink.json
+/Comfy.Presentation/obj/Debug/net8.0/ref/Comfy.Presentation.dll
+/Comfy.Presentation/obj/Debug/net8.0/refint/Comfy.Presentation.dll
+/Comfy.Presentation/obj/Debug/net8.0/scopedcss/bundle/Comfy.Presentation.styles.css
+/Comfy.Presentation/obj/Debug/net8.0/scopedcss/projectbundle/Comfy.Presentation.bundle.scp.css
+/Comfy.Presentation/obj/Debug/net8.0/scopedcss/Views/Shared/_Layout.cshtml.rz.scp.css
+/Comfy.Presentation/obj/Debug/net8.0/staticwebassets.build.json
+/Comfy.Presentation/obj/Debug/net8.0/staticwebassets.development.json
+/Comfy.Presentation/obj/Debug/net8.0/staticwebassets.pack.json
+/Comfy.Presentation/obj/Debug/net8.0/staticwebassets/msbuild.build.Comfy.Presentation.props
+/Comfy.Presentation/obj/Debug/net8.0/staticwebassets/msbuild.buildMultiTargeting.Comfy.Presentation.props
+/Comfy.Presentation/obj/Debug/net8.0/staticwebassets/msbuild.buildTransitive.Comfy.Presentation.props
+/Comfy.Presentation/obj/Debug/net8.0/staticwebassets/msbuild.Comfy.Presentation.Microsoft.AspNetCore.StaticWebAssets.props
+/Comfy.Presentation/obj/project.assets.json
+/Comfy.Presentation/obj/project.nuget.cache
