Presentation layer edited

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,5 @@
 /Comfy.Presentation/obj/Debug/net8.0/staticwebassets/msbuild.Comfy.Presentation.Microsoft.AspNetCore.StaticWebAssets.props
 /Comfy.Presentation/obj/project.assets.json
 /Comfy.Presentation/obj/project.nuget.cache
+/.vs/Comfy/FileContentIndex/10e32eee-fb13-4c33-975e-daa0cb77bc9d.vsidx
+/.vs/Comfy/FileContentIndex/78cdfc14-6949-46b1-84f8-f7c92913d63c.vsidx
